--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cards Collector Game</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
     <nav>
-        <a href="collection.html">Collection</a>
+        <a href="index.html">Collection</a>
         <a href="chests.html">Chests</a>
     </nav>
     
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
