feat: added temporary chest rarity and opening system

--- a/chests.html
+++ b/chests.html
@@ -7,10 +7,23 @@
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
+    <div class="menu-trigger">
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
     <nav>
+        <span>
+            <p>&#x2715;</p>
+        </span>
         <a href="index.html">Collection</a>
         <a href="chests.html">Chests</a>
     </nav>
+
+    <div class="chest">
+        placeholder text
+    </div>
+    <div class="result"></div>
     
     <script src="js/script.js"></script>
 </body>
